added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>My fist websit</h3>
+        <p>As some of you may know, I have been in the design industry for the past 10 years working as a freelance designer in various companies while also running this blog. In fact, the majority of my income is mostly from my design freelance work over at The Pete Design.
+
+            I value well-designed products and today, I want to dive down into the design of travel blogs and feature the best design travel blogs out there that take storytelling to the next level and hopefully inspire you to create an awesome travel blog on your own.</p>
+    </div>
     
 </body>
 </html>
